Composite rendering more images than needed #62053

Closed
opened 2019-02-28 17:33:51 +01:00 by Vitor Balbio · 6 comments

System Information
Operating system: Windows 10
Graphics card: GTX 970

Blender Version
Broken: 2.80, 3d8cbb534f
Worked: 2.79b

Short description of error

When using composite to render multiple images at once. It render images twice (or more) for the other scenes other than the original. In the Blender 2.79 that not happen.
It also renders all render layers even those are not needed or asked for in Composite (but that happen in Blender 2.79b also, sure it's look like a bug too)

Exact steps for others to reproduce the error
Open the .blend bugRender.blend
Press F12
Blender 2.79b renders 3 images
Blender 2.8 renders 5 images

**System Information** Operating system: Windows 10 Graphics card: GTX 970 **Blender Version** Broken: 2.80, 3d8cbb534f82 Worked: 2.79b **Short description of error** When using composite to render multiple images at once. It render images twice (or more) for the other scenes other than the original. In the Blender 2.79 that not happen. It also renders all render layers even those are not needed or asked for in Composite (but that happen in Blender 2.79b also, sure it's look like a bug too) **Exact steps for others to reproduce the error** Open the .blend [bugRender.blend](https://archive.blender.org/developer/F6730986/bugRender.blend) Press F12 Blender 2.79b renders 3 images Blender 2.8 renders 5 images
Author

Added subscriber: @vitorbalbio-3

Added subscriber: @vitorbalbio-3
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Confirmed at first sight, checking...

Confirmed at first sight, checking...
Philipp Oeser self-assigned this 2019-03-01 10:58:10 +01:00
Member

Seems like it is going over all RenderLayer nodes and renders the corresponding scene no matter if has been rendered already...

2.7 tagged the RenderLayer node with LIB_TAG_DOIT, which is missing in 2.8... Diff/Fix incoming...

Seems like it is going over all RenderLayer nodes and renders the corresponding scene no matter if has been rendered already... 2.7 tagged the RenderLayer node with `LIB_TAG_DOIT`, which is missing in 2.8... Diff/Fix incoming...

This issue was referenced by 9f77c20286

This issue was referenced by 9f77c202868b1b44fa35c1b689a56b1ef2ac4ac0
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62053
No description provided.