Fix T62053: Composite rendering more images than needed

Reviewers: brecht

Maniphest Tasks: T62053

Differential Revision: https://developer.blender.org/D4432